Edit redis db config.