@@ -5,7 +5,6 @@ import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.cloud.openfeign.EnableFeignClients;
 
 /**
- * RocketMQ序列化 VM Options: --add-opens java.base/java.lang.invoke=ALL-UNNAMED
  * @author Jmc
  */
 @SpringBootApplication
